# syssoft-team-ultimos-romanticos

./: Makefile.am  README.m4  README.md  build.mk  crt0.S  hello.c  hello.ld  libc.S  main.c  stdio.h
quiz/: Makefile  README  SOLVED  bintools.mk  p1.c  p2.c  p2fix.c  p3.c  p4.c  p4a.c  p4b.c
